syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

enum ExpansionSubType {
  ExpansionSubType_UNDEFINED = 0;
  ExpansionSubType_WATER = 1;
}
